// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CharacterInfo Default render 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="characterDetail__info"
      >
        <div
          class="characterDetail__info-image"
          style="background-image: url(http://i.annihil.us/u/prod/marvel/i/mg/3/20/5232158de5b16.jpg);"
        />
        <div
          class="characterDetail__info-content"
        >
          <div
            class="characterDetail__info-content-header"
          >
            <p>
              A-Bomb (HAS)
            </p>
            <button
              class="buttonIcon"
            >
              <svg
                fill="none"
                height="21.68"
                viewBox="0 0 15 14"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M4.75 1.55237L5.26885 0.697502L4.75 0.382594L4.23115 0.697502L4.75 1.55237ZM7.75 3.37318L7.23115 4.22804L7.75 4.54295L8.26885 4.22804L7.75 3.37318ZM1.75 3.37318L1.23115 2.51831L0.75 2.81034V3.37318H1.75ZM1.75 7.27491H0.75V7.73644L1.1012 8.03587L1.75 7.27491ZM7.75 12.3905L7.1012 13.1515L7.75 13.7046L8.3988 13.1515L7.75 12.3905ZM13.75 7.27491L14.3988 8.03587L14.75 7.73644V7.27491H13.75ZM13.75 3.37318H14.75V2.81034L14.2688 2.51831L13.75 3.37318ZM10.75 1.55237L11.2689 0.697502L10.75 0.382594L10.2312 0.697502L10.75 1.55237ZM4.23115 2.40723L7.23115 4.22804L8.26885 2.51831L5.26885 0.697502L4.23115 2.40723ZM2.26885 4.22804L5.26885 2.40723L4.23115 0.697502L1.23115 2.51831L2.26885 4.22804ZM2.75 7.27491V3.37318H0.75V7.27491H2.75ZM8.3988 11.6296L2.3988 6.51395L1.1012 8.03587L7.1012 13.1515L8.3988 11.6296ZM8.3988 13.1515L14.3988 8.03587L13.1012 6.51395L7.1012 11.6296L8.3988 13.1515ZM14.75 7.27491V3.37318H12.75V7.27491H14.75ZM14.2688 2.51831L11.2689 0.697502L10.2312 2.40723L13.2312 4.22804L14.2688 2.51831ZM10.2312 0.697502L7.23115 2.51831L8.26885 4.22804L11.2689 2.40723L10.2312 0.697502Z"
                  fill="white"
                />
              </svg>
            </button>
          </div>
          <p>
            Rick Jones has been Hulk's best bud since day one 
          </p>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="characterDetail__info"
    >
      <div
        class="characterDetail__info-image"
        style="background-image: url(http://i.annihil.us/u/prod/marvel/i/mg/3/20/5232158de5b16.jpg);"
      />
      <div
        class="characterDetail__info-content"
      >
        <div
          class="characterDetail__info-content-header"
        >
          <p>
            A-Bomb (HAS)
          </p>
          <button
            class="buttonIcon"
          >
            <svg
              fill="none"
              height="21.68"
              viewBox="0 0 15 14"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M4.75 1.55237L5.26885 0.697502L4.75 0.382594L4.23115 0.697502L4.75 1.55237ZM7.75 3.37318L7.23115 4.22804L7.75 4.54295L8.26885 4.22804L7.75 3.37318ZM1.75 3.37318L1.23115 2.51831L0.75 2.81034V3.37318H1.75ZM1.75 7.27491H0.75V7.73644L1.1012 8.03587L1.75 7.27491ZM7.75 12.3905L7.1012 13.1515L7.75 13.7046L8.3988 13.1515L7.75 12.3905ZM13.75 7.27491L14.3988 8.03587L14.75 7.73644V7.27491H13.75ZM13.75 3.37318H14.75V2.81034L14.2688 2.51831L13.75 3.37318ZM10.75 1.55237L11.2689 0.697502L10.75 0.382594L10.2312 0.697502L10.75 1.55237ZM4.23115 2.40723L7.23115 4.22804L8.26885 2.51831L5.26885 0.697502L4.23115 2.40723ZM2.26885 4.22804L5.26885 2.40723L4.23115 0.697502L1.23115 2.51831L2.26885 4.22804ZM2.75 7.27491V3.37318H0.75V7.27491H2.75ZM8.3988 11.6296L2.3988 6.51395L1.1012 8.03587L7.1012 13.1515L8.3988 11.6296ZM8.3988 13.1515L14.3988 8.03587L13.1012 6.51395L7.1012 11.6296L8.3988 13.1515ZM14.75 7.27491V3.37318H12.75V7.27491H14.75ZM14.2688 2.51831L11.2689 0.697502L10.2312 2.40723L13.2312 4.22804L14.2688 2.51831ZM10.2312 0.697502L7.23115 2.51831L8.26885 4.22804L11.2689 2.40723L10.2312 0.697502Z"
                fill="white"
              />
            </svg>
          </button>
        </div>
        <p>
          Rick Jones has been Hulk's best bud since day one 
        </p>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`CharacterInfo Loading render 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="characterDetail__info"
      >
        <div
          class="characterDetail__info-image"
          style="background-image: url(http://i.annihil.us/u/prod/marvel/i/mg/3/20/5232158de5b16.jpg);"
        >
          <div
            class="loader"
          >
            <span
              class="loader__spinner"
            />
          </div>
        </div>
        <div
          class="characterDetail__info-content"
        >
          <div
            class="characterDetail__info-content-header"
          >
            <p>
              A-Bomb (HAS)
            </p>
          </div>
          <p>
            Rick Jones has been Hulk's best bud since day one 
          </p>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="characterDetail__info"
    >
      <div
        class="characterDetail__info-image"
        style="background-image: url(http://i.annihil.us/u/prod/marvel/i/mg/3/20/5232158de5b16.jpg);"
      >
        <div
          class="loader"
        >
          <span
            class="loader__spinner"
          />
        </div>
      </div>
      <div
        class="characterDetail__info-content"
      >
        <div
          class="characterDetail__info-content-header"
        >
          <p>
            A-Bomb (HAS)
          </p>
        </div>
        <p>
          Rick Jones has been Hulk's best bud since day one 
        </p>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
